tests/fixtures/invalid/list_le_bool.py
# Cannot compare with <= List[int] and Bool
x: bool = [1, 2, 3] <= True
